--- a/index.html
+++ b/index.html
@@ -238,6 +238,17 @@
 				</div>
 			</div>
 		</div>
+
+		<div class="marquee">
+			<p>
+				Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error facere corrupti animi mollitia ab dolore
+				incidunt odio voluptate, aut sequi nobis quibusdam repellat earum tempora nostrum laboriosam itaque
+				cumque! Omnis. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias, nulla eligendi
+				officia voluptatem aliquam esse possimus consequuntur repudiandae exercitationem blanditiis, magnam a
+				quos incidunt itaque perferendis nostrum quis nesciunt eaque!
+			</p>
+		</div>
+		<div id="calendar" class="calendar"></div>
 	</main>
 
 
